apps/base/monitoring-apcups-exporter/deploy/exporter/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: apcups-exporter-prometheus
  labels:
    prometheus-target: apcups-exporter
spec:
  ports:
    - port: 9162
      name: metrics
      targetPort: metrics
  selector:
    app.kubernetes.io/name: apcups-exporter
    app.kubernetes.io/component: apcups-exporter
